# bevy_typst_textures

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
assets/: standalone.typ
assets/example/: main.typ
examples/: 2d.rs  3d.rs  data_in.rs  default_fonts_3d.rs  manually_defined_template.rs  with_input.rs
src/: asset_loading.rs  file_resolver.rs  lib.rs  template.rs
