[package]
name = "bevy_typst_textures"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = ""
keywords = ["bevy", "asset", "typst", "game development"]
categories = ["game-development"]
homepage = "https://github.com/fallible-algebra/bevy_typst_textures"
repository = "https://github.com/fallible-algebra/bevy_typst_textures"
readme = "README.md"
build = "build.rs"

[features]
typst-resolve-ureq = ["typst-as-lib/ureq"]
typst-resolve-reqwest = ["typst-as-lib/reqwest"]
typst-asset-fonts = ["typst-as-lib/typst-kit-embed-fonts", "typst-as-lib/typst-kit-fonts"]
typst-search-system-fonts = ["typst-as-lib/typst-kit-fonts"]
packages = ["typst-as-lib/packages"]

[dependencies]
bevy_ecs = "0.16"
bevy_asset = "0.16"
bevy_app = "0.16"
bevy_reflect = "0.16"
bevy_image = "0.16"
bevy_log = "0.16"
bevy_tasks = "0.16"
typst-as-lib = {version = "=0.14.4"}
# typst-as-lib = {git = "https://github.com/fallible-algebra/typst-as-lib-fork"}
typst = "0.13.1"
typst-render = "0.13.1"
serde = "1"
serde_json = "1"
derive_more = { version = "1.0.0", features = ["error"] }
zip = {version = "4.2.0", default-features = false, features = [
    "aes-crypto",
    "bzip2",
    "deflate64",
    "deflate",
    "time",
    "zstd",
]}
toml = "0.8.19"
uuid = { version = "1", features = ["v4"] }
wgpu-types = "24.0"
tiny-skia = "0.11"
async-channel = "2.5"

[dev-dependencies]
bevy = "0.16"